# universal-ai-failure-database

./: .gitignore  01_README_English.md  02_repo_description.bf  03_repo_description.ws  05_malbolge_interpreter.py  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DONATE.md  LICENSE  LICENSE-DATA  MALBOLGE_README.md  README.md  SECURITY.md  requirements-dev.txt  requirements.txt  setup.cfg  uaifd_banner.bf
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: entry-correction.md  new-entry.md
.github/workflows/: stats.yml  validate.yml
data/hallucinations/: UAIFD-HAL-0001.json  UAIFD-HAL-0002.json  UAIFD-HAL-0003.json
data/legal-errors/: UAIFD-LEG-0001.json
data/logic-errors/: UAIFD-LOG-0001.json
data/math-errors/: UAIFD-MATH-0001.json  UAIFD-MATH-0002.json
data/vulnerabilities/: UAIFD-VUL-0001.json
docs/: severity-guide.md
docs/schemas/: hallucination.md  legal-error.md  logic-error.md  math-error.md  vulnerability.md
docs/templates/: hallucination-template.json  legal-error-template.json  logic-error-template.json  math-error-template.json  vulnerability-template.json
tests/: test_validate.py
tools/: export.py  query.py  stats.py  validate.py  validate_all.py
