[metadata]
name = universal-ai-failure-database
version = 1.0.0
description = Open-source database of documented AI model failures
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Ciprian Stefan Plesca and Contributors
keywords = ai, safety, hallucination, llm, evaluation, benchmark

[options]
python_requires = >=3.10

[tool:pytest]
testpaths = tests
addopts = -v --tb=short

[flake8]
max-line-length = 120
exclude = .venv,venv,.git,__pycache__
